Updating SDK after a ton of renames on the bot side.
