# ownbotsidekick/src/Generated/SidekickApi/src/SidekickApi/Model/ClipSummary.cs
@@ -1,0 +1,163 @@
+// <auto-generated>
+/*
+ * Sidekick Control API
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 0.0.2
+ * Generated by: https://github.com/openapitools/openapi-generator.git
+ */
+
+#nullable enable
+
+using System;
+using System.Collections;
+using System.Collections.Generic;
+using System.Collections.ObjectModel;
+using System.Linq;
+using System.IO;
+using System.Text;
+using System.Text.RegularExpressions;
+using System.Text.Json;
+using System.Text.Json.Serialization;
+using System.ComponentModel.DataAnnotations;
+using SidekickApi.Client;
+
+namespace SidekickApi.Model
+{
+    /// <summary>
+    /// ClipSummary
+    /// </summary>
+    public partial class ClipSummary : IValidatableObject
+    {
+        /// <summary>
+        /// Initializes a new instance of the <see cref="ClipSummary" /> class.
+        /// </summary>
+        /// <param name="trigger">trigger</param>
+        [JsonConstructor]
+        public ClipSummary(string trigger)
+        {
+            Trigger = trigger;
+            OnCreated();
+        }
+
+        partial void OnCreated();
+
+        /// <summary>
+        /// Gets or Sets Trigger
+        /// </summary>
+        [JsonPropertyName("trigger")]
+        public string Trigger { get; set; }
+
+        /// <summary>
+        /// Returns the string presentation of the object
+        /// </summary>
+        /// <returns>String presentation of the object</returns>
+        public override string ToString()
+        {
+            StringBuilder sb = new StringBuilder();
+            sb.Append("class ClipSummary {\n");
+            sb.Append("  Trigger: ").Append(Trigger).Append("\n");
+            sb.Append("}\n");
+            return sb.ToString();
+        }
+
+        /// <summary>
+        /// To validate all properties of the instance
+        /// </summary>
+        /// <param name="validationContext">Validation context</param>
+        /// <returns>Validation Result</returns>
+        IEnumerable<ValidationResult> IValidatableObject.Validate(ValidationContext validationContext)
+        {
+            yield break;
+        }
+    }
+
+    /// <summary>
+    /// A Json converter for type <see cref="ClipSummary" />
+    /// </summary>
+    public class ClipSummaryJsonConverter : JsonConverter<ClipSummary>
+    {
+        /// <summary>
+        /// Deserializes json to <see cref="ClipSummary" />
+        /// </summary>
+        /// <param name="utf8JsonReader"></param>
+        /// <param name="typeToConvert"></param>
+        /// <param name="jsonSerializerOptions"></param>
+        /// <returns></returns>
+        /// <exception cref="JsonException"></exception>
+        public override ClipSummary Read(ref Utf8JsonReader utf8JsonReader, Type typeToConvert, JsonSerializerOptions jsonSerializerOptions)
+        {
+            int currentDepth = utf8JsonReader.CurrentDepth;
+
+            if (utf8JsonReader.TokenType != JsonTokenType.StartObject && utf8JsonReader.TokenType != JsonTokenType.StartArray)
+                throw new JsonException();
+
+            JsonTokenType startingTokenType = utf8JsonReader.TokenType;
+
+            Option<string?> trigger = default;
+
+            while (utf8JsonReader.Read())
+            {
+                if (startingTokenType == JsonTokenType.StartObject && utf8JsonReader.TokenType == JsonTokenType.EndObject && currentDepth == utf8JsonReader.CurrentDepth)
+                    break;
+
+                if (startingTokenType == JsonTokenType.StartArray && utf8JsonReader.TokenType == JsonTokenType.EndArray && currentDepth == utf8JsonReader.CurrentDepth)
+                    break;
+
+                if (utf8JsonReader.TokenType == JsonTokenType.PropertyName && currentDepth == utf8JsonReader.CurrentDepth - 1)
+                {
+                    string? localVarJsonPropertyName = utf8JsonReader.GetString();
+                    utf8JsonReader.Read();
+
+                    switch (localVarJsonPropertyName)
+                    {
+                        case "trigger":
+                            trigger = new Option<string?>(utf8JsonReader.GetString()!);
+                            break;
+                        default:
+                            break;
+                    }
+                }
+            }
+
+            if (!trigger.IsSet)
+                throw new ArgumentException("Property is required for class ClipSummary.", nameof(trigger));
+
+            if (trigger.IsSet && trigger.Value == null)
+                throw new ArgumentNullException(nameof(trigger), "Property is not nullable for class ClipSummary.");
+
+            return new ClipSummary(trigger.Value!);
+        }
+
+        /// <summary>
+        /// Serializes a <see cref="ClipSummary" />
+        /// </summary>
+        /// <param name="writer"></param>
+        /// <param name="clipSummary"></param>
+        /// <param name="jsonSerializerOptions"></param>
+        /// <exception cref="NotImplementedException"></exception>
+        public override void Write(Utf8JsonWriter writer, ClipSummary clipSummary, JsonSerializerOptions jsonSerializerOptions)
+        {
+            writer.WriteStartObject();
+
+            WriteProperties(writer, clipSummary, jsonSerializerOptions);
+            writer.WriteEndObject();
+        }
+
+        /// <summary>
+        /// Serializes the properties of <see cref="ClipSummary" />
+        /// </summary>
+        /// <param name="writer"></param>
+        /// <param name="clipSummary"></param>
+        /// <param name="jsonSerializerOptions"></param>
+        /// <exception cref="NotImplementedException"></exception>
+        public void WriteProperties(Utf8JsonWriter writer, ClipSummary clipSummary, JsonSerializerOptions jsonSerializerOptions)
+        {
+            if (clipSummary.Trigger == null)
+                throw new ArgumentNullException(nameof(clipSummary.Trigger), "Property is required for class ClipSummary.");
+
+            writer.WriteString("trigger", clipSummary.Trigger);
+        }
+    }
+}
