# ownbotsidekick/src/Generated/SidekickApi/src/SidekickApi/Model/ListClipsResponse.cs
@@ -1,0 +1,252 @@
+// <auto-generated>
+/*
+ * Sidekick Control API
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 0.0.2
+ * Generated by: https://github.com/openapitools/openapi-generator.git
+ */
+
+#nullable enable
+
+using System;
+using System.Collections;
+using System.Collections.Generic;
+using System.Collections.ObjectModel;
+using System.Linq;
+using System.IO;
+using System.Text;
+using System.Text.RegularExpressions;
+using System.Text.Json;
+using System.Text.Json.Serialization;
+using System.ComponentModel.DataAnnotations;
+using SidekickApi.Client;
+
+namespace SidekickApi.Model
+{
+    /// <summary>
+    /// ListClipsResponse
+    /// </summary>
+    public partial class ListClipsResponse : IValidatableObject
+    {
+        /// <summary>
+        /// Initializes a new instance of the <see cref="ListClipsResponse" /> class.
+        /// </summary>
+        /// <param name="ok">ok</param>
+        /// <param name="guildId">guildId</param>
+        /// <param name="clips">clips</param>
+        /// <param name="total">total</param>
+        /// <param name="search">search</param>
+        [JsonConstructor]
+        public ListClipsResponse(bool ok, int guildId, List<ClipSummary> clips, int total, Option<string?> search = default)
+        {
+            Ok = ok;
+            GuildId = guildId;
+            Clips = clips;
+            Total = total;
+            SearchOption = search;
+            OnCreated();
+        }
+
+        partial void OnCreated();
+
+        /// <summary>
+        /// Gets or Sets Ok
+        /// </summary>
+        [JsonPropertyName("ok")]
+        public bool Ok { get; set; }
+
+        /// <summary>
+        /// Gets or Sets GuildId
+        /// </summary>
+        [JsonPropertyName("guild_id")]
+        public int GuildId { get; set; }
+
+        /// <summary>
+        /// Gets or Sets Clips
+        /// </summary>
+        [JsonPropertyName("clips")]
+        public List<ClipSummary> Clips { get; set; }
+
+        /// <summary>
+        /// Gets or Sets Total
+        /// </summary>
+        [JsonPropertyName("total")]
+        public int Total { get; set; }
+
+        /// <summary>
+        /// Used to track the state of Search
+        /// </summary>
+        [JsonIgnore]
+        [global::System.ComponentModel.EditorBrowsable(global::System.ComponentModel.EditorBrowsableState.Never)]
+        public Option<string?> SearchOption { get; private set; }
+
+        /// <summary>
+        /// Gets or Sets Search
+        /// </summary>
+        [JsonPropertyName("search")]
+        public string? Search { get { return this.SearchOption; } set { this.SearchOption = new(value); } }
+
+        /// <summary>
+        /// Returns the string presentation of the object
+        /// </summary>
+        /// <returns>String presentation of the object</returns>
+        public override string ToString()
+        {
+            StringBuilder sb = new StringBuilder();
+            sb.Append("class ListClipsResponse {\n");
+            sb.Append("  Ok: ").Append(Ok).Append("\n");
+            sb.Append("  GuildId: ").Append(GuildId).Append("\n");
+            sb.Append("  Clips: ").Append(Clips).Append("\n");
+            sb.Append("  Total: ").Append(Total).Append("\n");
+            sb.Append("  Search: ").Append(Search).Append("\n");
+            sb.Append("}\n");
+            return sb.ToString();
+        }
+
+        /// <summary>
+        /// To validate all properties of the instance
+        /// </summary>
+        /// <param name="validationContext">Validation context</param>
+        /// <returns>Validation Result</returns>
+        IEnumerable<ValidationResult> IValidatableObject.Validate(ValidationContext validationContext)
+        {
+            yield break;
+        }
+    }
+
+    /// <summary>
+    /// A Json converter for type <see cref="ListClipsResponse" />
+    /// </summary>
+    public class ListClipsResponseJsonConverter : JsonConverter<ListClipsResponse>
+    {
+        /// <summary>
+        /// Deserializes json to <see cref="ListClipsResponse" />
+        /// </summary>
+        /// <param name="utf8JsonReader"></param>
+        /// <param name="typeToConvert"></param>
+        /// <param name="jsonSerializerOptions"></param>
+        /// <returns></returns>
+        /// <exception cref="JsonException"></exception>
+        public override ListClipsResponse Read(ref Utf8JsonReader utf8JsonReader, Type typeToConvert, JsonSerializerOptions jsonSerializerOptions)
+        {
+            int currentDepth = utf8JsonReader.CurrentDepth;
+
+            if (utf8JsonReader.TokenType != JsonTokenType.StartObject && utf8JsonReader.TokenType != JsonTokenType.StartArray)
+                throw new JsonException();
+
+            JsonTokenType startingTokenType = utf8JsonReader.TokenType;
+
+            Option<bool?> ok = default;
+            Option<int?> guildId = default;
+            Option<List<ClipSummary>?> clips = default;
+            Option<int?> total = default;
+            Option<string?> search = default;
+
+            while (utf8JsonReader.Read())
+            {
+                if (startingTokenType == JsonTokenType.StartObject && utf8JsonReader.TokenType == JsonTokenType.EndObject && currentDepth == utf8JsonReader.CurrentDepth)
+                    break;
+
+                if (startingTokenType == JsonTokenType.StartArray && utf8JsonReader.TokenType == JsonTokenType.EndArray && currentDepth == utf8JsonReader.CurrentDepth)
+                    break;
+
+                if (utf8JsonReader.TokenType == JsonTokenType.PropertyName && currentDepth == utf8JsonReader.CurrentDepth - 1)
+                {
+                    string? localVarJsonPropertyName = utf8JsonReader.GetString();
+                    utf8JsonReader.Read();
+
+                    switch (localVarJsonPropertyName)
+                    {
+                        case "ok":
+                            ok = new Option<bool?>(utf8JsonReader.TokenType == JsonTokenType.Null ? (bool?)null : utf8JsonReader.GetBoolean());
+                            break;
+                        case "guild_id":
+                            guildId = new Option<int?>(utf8JsonReader.TokenType == JsonTokenType.Null ? (int?)null : utf8JsonReader.GetInt32());
+                            break;
+                        case "clips":
+                            clips = new Option<List<ClipSummary>?>(JsonSerializer.Deserialize<List<ClipSummary>>(ref utf8JsonReader, jsonSerializerOptions)!);
+                            break;
+                        case "total":
+                            total = new Option<int?>(utf8JsonReader.TokenType == JsonTokenType.Null ? (int?)null : utf8JsonReader.GetInt32());
+                            break;
+                        case "search":
+                            search = new Option<string?>(utf8JsonReader.GetString());
+                            break;
+                        default:
+                            break;
+                    }
+                }
+            }
+
+            if (!ok.IsSet)
+                throw new ArgumentException("Property is required for class ListClipsResponse.", nameof(ok));
+
+            if (!guildId.IsSet)
+                throw new ArgumentException("Property is required for class ListClipsResponse.", nameof(guildId));
+
+            if (!clips.IsSet)
+                throw new ArgumentException("Property is required for class ListClipsResponse.", nameof(clips));
+
+            if (!total.IsSet)
+                throw new ArgumentException("Property is required for class ListClipsResponse.", nameof(total));
+
+            if (ok.IsSet && ok.Value == null)
+                throw new ArgumentNullException(nameof(ok), "Property is not nullable for class ListClipsResponse.");
+
+            if (guildId.IsSet && guildId.Value == null)
+                throw new ArgumentNullException(nameof(guildId), "Property is not nullable for class ListClipsResponse.");
+
+            if (clips.IsSet && clips.Value == null)
+                throw new ArgumentNullException(nameof(clips), "Property is not nullable for class ListClipsResponse.");
+
+            if (total.IsSet && total.Value == null)
+                throw new ArgumentNullException(nameof(total), "Property is not nullable for class ListClipsResponse.");
+
+            return new ListClipsResponse(ok.Value!.Value!, guildId.Value!.Value!, clips.Value!, total.Value!.Value!, search);
+        }
+
+        /// <summary>
+        /// Serializes a <see cref="ListClipsResponse" />
+        /// </summary>
+        /// <param name="writer"></param>
+        /// <param name="listClipsResponse"></param>
+        /// <param name="jsonSerializerOptions"></param>
+        /// <exception cref="NotImplementedException"></exception>
+        public override void Write(Utf8JsonWriter writer, ListClipsResponse listClipsResponse, JsonSerializerOptions jsonSerializerOptions)
+        {
+            writer.WriteStartObject();
+
+            WriteProperties(writer, listClipsResponse, jsonSerializerOptions);
+            writer.WriteEndObject();
+        }
+
+        /// <summary>
+        /// Serializes the properties of <see cref="ListClipsResponse" />
+        /// </summary>
+        /// <param name="writer"></param>
+        /// <param name="listClipsResponse"></param>
+        /// <param name="jsonSerializerOptions"></param>
+        /// <exception cref="NotImplementedException"></exception>
+        public void WriteProperties(Utf8JsonWriter writer, ListClipsResponse listClipsResponse, JsonSerializerOptions jsonSerializerOptions)
+        {
+            if (listClipsResponse.Clips == null)
+                throw new ArgumentNullException(nameof(listClipsResponse.Clips), "Property is required for class ListClipsResponse.");
+
+            writer.WriteBoolean("ok", listClipsResponse.Ok);
+
+            writer.WriteNumber("guild_id", listClipsResponse.GuildId);
+
+            writer.WritePropertyName("clips");
+            JsonSerializer.Serialize(writer, listClipsResponse.Clips, jsonSerializerOptions);
+            writer.WriteNumber("total", listClipsResponse.Total);
+
+            if (listClipsResponse.SearchOption.IsSet)
+                if (listClipsResponse.SearchOption.Value != null)
+                    writer.WriteString("search", listClipsResponse.Search);
+                else
+                    writer.WriteNull("search");
+        }
+    }
+}
