# ownbotsidekick/src/Generated/SidekickApi/src/SidekickApi/Model/PlayClipRequest.cs
@@ -1,0 +1,228 @@
+// <auto-generated>
+/*
+ * Sidekick Control API
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 0.0.2
+ * Generated by: https://github.com/openapitools/openapi-generator.git
+ */
+
+#nullable enable
+
+using System;
+using System.Collections;
+using System.Collections.Generic;
+using System.Collections.ObjectModel;
+using System.Linq;
+using System.IO;
+using System.Text;
+using System.Text.RegularExpressions;
+using System.Text.Json;
+using System.Text.Json.Serialization;
+using System.ComponentModel.DataAnnotations;
+using SidekickApi.Client;
+
+namespace SidekickApi.Model
+{
+    /// <summary>
+    /// PlayClipRequest
+    /// </summary>
+    public partial class PlayClipRequest : IValidatableObject
+    {
+        /// <summary>
+        /// Initializes a new instance of the <see cref="PlayClipRequest" /> class.
+        /// </summary>
+        /// <param name="guildId">guildId</param>
+        /// <param name="trigger">trigger</param>
+        /// <param name="requestId">requestId</param>
+        [JsonConstructor]
+        public PlayClipRequest(long guildId, string trigger, Option<string?> requestId = default)
+        {
+            GuildId = guildId;
+            Trigger = trigger;
+            RequestIdOption = requestId;
+            OnCreated();
+        }
+
+        partial void OnCreated();
+
+        /// <summary>
+        /// Gets or Sets GuildId
+        /// </summary>
+        [JsonPropertyName("guild_id")]
+        public long GuildId { get; set; }
+
+        /// <summary>
+        /// Gets or Sets Trigger
+        /// </summary>
+        [JsonPropertyName("trigger")]
+        public string Trigger { get; set; }
+
+        /// <summary>
+        /// Used to track the state of RequestId
+        /// </summary>
+        [JsonIgnore]
+        [global::System.ComponentModel.EditorBrowsable(global::System.ComponentModel.EditorBrowsableState.Never)]
+        public Option<string?> RequestIdOption { get; private set; }
+
+        /// <summary>
+        /// Gets or Sets RequestId
+        /// </summary>
+        [JsonPropertyName("request_id")]
+        public string? RequestId { get { return this.RequestIdOption; } set { this.RequestIdOption = new(value); } }
+
+        /// <summary>
+        /// Returns the string presentation of the object
+        /// </summary>
+        /// <returns>String presentation of the object</returns>
+        public override string ToString()
+        {
+            StringBuilder sb = new StringBuilder();
+            sb.Append("class PlayClipRequest {\n");
+            sb.Append("  GuildId: ").Append(GuildId).Append("\n");
+            sb.Append("  Trigger: ").Append(Trigger).Append("\n");
+            sb.Append("  RequestId: ").Append(RequestId).Append("\n");
+            sb.Append("}\n");
+            return sb.ToString();
+        }
+
+        /// <summary>
+        /// To validate all properties of the instance
+        /// </summary>
+        /// <param name="validationContext">Validation context</param>
+        /// <returns>Validation Result</returns>
+        IEnumerable<ValidationResult> IValidatableObject.Validate(ValidationContext validationContext)
+        {
+            // GuildId (long) minimum
+            if (this.GuildId < (long)0)
+            {
+                yield return new ValidationResult("Invalid value for GuildId, must be a value greater than 0.", new [] { "GuildId" });
+            }
+
+            // Trigger (string) maxLength
+            if (this.Trigger != null && this.Trigger.Length > 64)
+            {
+                yield return new ValidationResult("Invalid value for Trigger, length must be less than 64.", new [] { "Trigger" });
+            }
+
+            // Trigger (string) minLength
+            if (this.Trigger != null && this.Trigger.Length < 1)
+            {
+                yield return new ValidationResult("Invalid value for Trigger, length must be greater than 1.", new [] { "Trigger" });
+            }
+
+            yield break;
+        }
+    }
+
+    /// <summary>
+    /// A Json converter for type <see cref="PlayClipRequest" />
+    /// </summary>
+    public class PlayClipRequestJsonConverter : JsonConverter<PlayClipRequest>
+    {
+        /// <summary>
+        /// Deserializes json to <see cref="PlayClipRequest" />
+        /// </summary>
+        /// <param name="utf8JsonReader"></param>
+        /// <param name="typeToConvert"></param>
+        /// <param name="jsonSerializerOptions"></param>
+        /// <returns></returns>
+        /// <exception cref="JsonException"></exception>
+        public override PlayClipRequest Read(ref Utf8JsonReader utf8JsonReader, Type typeToConvert, JsonSerializerOptions jsonSerializerOptions)
+        {
+            int currentDepth = utf8JsonReader.CurrentDepth;
+
+            if (utf8JsonReader.TokenType != JsonTokenType.StartObject && utf8JsonReader.TokenType != JsonTokenType.StartArray)
+                throw new JsonException();
+
+            JsonTokenType startingTokenType = utf8JsonReader.TokenType;
+
+            Option<long?> guildId = default;
+            Option<string?> trigger = default;
+            Option<string?> requestId = default;
+
+            while (utf8JsonReader.Read())
+            {
+                if (startingTokenType == JsonTokenType.StartObject && utf8JsonReader.TokenType == JsonTokenType.EndObject && currentDepth == utf8JsonReader.CurrentDepth)
+                    break;
+
+                if (startingTokenType == JsonTokenType.StartArray && utf8JsonReader.TokenType == JsonTokenType.EndArray && currentDepth == utf8JsonReader.CurrentDepth)
+                    break;
+
+                if (utf8JsonReader.TokenType == JsonTokenType.PropertyName && currentDepth == utf8JsonReader.CurrentDepth - 1)
+                {
+                    string? localVarJsonPropertyName = utf8JsonReader.GetString();
+                    utf8JsonReader.Read();
+
+                    switch (localVarJsonPropertyName)
+                    {
+                        case "guild_id":
+                            guildId = new Option<long?>(utf8JsonReader.TokenType == JsonTokenType.Null ? (int?)null : utf8JsonReader.GetInt32());
+                            break;
+                        case "trigger":
+                            trigger = new Option<string?>(utf8JsonReader.GetString()!);
+                            break;
+                        case "request_id":
+                            requestId = new Option<string?>(utf8JsonReader.GetString());
+                            break;
+                        default:
+                            break;
+                    }
+                }
+            }
+
+            if (!guildId.IsSet)
+                throw new ArgumentException("Property is required for class PlayClipRequest.", nameof(guildId));
+
+            if (!trigger.IsSet)
+                throw new ArgumentException("Property is required for class PlayClipRequest.", nameof(trigger));
+
+            if (guildId.IsSet && guildId.Value == null)
+                throw new ArgumentNullException(nameof(guildId), "Property is not nullable for class PlayClipRequest.");
+
+            if (trigger.IsSet && trigger.Value == null)
+                throw new ArgumentNullException(nameof(trigger), "Property is not nullable for class PlayClipRequest.");
+
+            return new PlayClipRequest(guildId.Value!.Value!, trigger.Value!, requestId);
+        }
+
+        /// <summary>
+        /// Serializes a <see cref="PlayClipRequest" />
+        /// </summary>
+        /// <param name="writer"></param>
+        /// <param name="playClipRequest"></param>
+        /// <param name="jsonSerializerOptions"></param>
+        /// <exception cref="NotImplementedException"></exception>
+        public override void Write(Utf8JsonWriter writer, PlayClipRequest playClipRequest, JsonSerializerOptions jsonSerializerOptions)
+        {
+            writer.WriteStartObject();
+
+            WriteProperties(writer, playClipRequest, jsonSerializerOptions);
+            writer.WriteEndObject();
+        }
+
+        /// <summary>
+        /// Serializes the properties of <see cref="PlayClipRequest" />
+        /// </summary>
+        /// <param name="writer"></param>
+        /// <param name="playClipRequest"></param>
+        /// <param name="jsonSerializerOptions"></param>
+        /// <exception cref="NotImplementedException"></exception>
+        public void WriteProperties(Utf8JsonWriter writer, PlayClipRequest playClipRequest, JsonSerializerOptions jsonSerializerOptions)
+        {
+            if (playClipRequest.Trigger == null)
+                throw new ArgumentNullException(nameof(playClipRequest.Trigger), "Property is required for class PlayClipRequest.");
+
+            writer.WriteNumber("guild_id", playClipRequest.GuildId);
+
+            writer.WriteString("trigger", playClipRequest.Trigger);
+
+            if (playClipRequest.RequestIdOption.IsSet)
+                if (playClipRequest.RequestIdOption.Value != null)
+                    writer.WriteString("request_id", playClipRequest.RequestId);
+                else
+                    writer.WriteNull("request_id");
+        }
+    }
+}
